<resources>
    <string name="app_name">My Calculator</string>
    <string name="btn_plus">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_decimal">.</string>
    <string name="btn_minus">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="btn_multiply">*</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="square_root">√</string>
    <string name="power">^</string>
    <string name="mod">mod</string>
    <string name="_0">0</string>
</resources>
