<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/calculator_holder"
    tools:context=".MainActivity"
    tools:ignore="HardCodeText">


    <TextView
        android:id="@+id/formula"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:fontFamily="sans-serif-light"
        android:gravity="right|bottom"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="40sp"
        android:text="@string/_0"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnModulo"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/mod"
            android:textAllCaps="false"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/btnPower"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/power"/>

        <Button
            android:id="@+id/btnRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/square_root"/>


        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/c"/>


        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/ac"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnSeven"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_7"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_8"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_9"/>


        <Button
            android:id="@+id/btnDivide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="÷"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnFour"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textAllCaps="false"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_5"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_6"/>


        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/btn_multiply"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnOne"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textAllCaps="false"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_2"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/_3"/>


        <Button
            android:id="@+id/btnMinus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/btn_minus"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_0"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="0"
            android:textAllCaps="false"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/btn_decimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/btn_decimal"/>


        <Button
            android:id="@+id/btn_equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/btn_equal"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButton"
            android:layout_weight="1"
            android:text="@string/btn_plus"/>



    </LinearLayout>







</LinearLayout>